%% Modèle Logique de Données (MLD) — CARIBOOKS (livre autonome, sans héritage de table)
erDiagram
    etat_usure ||--o{ livre : "id_etat_usure"
    livre ||--o{ stock : "id_livre"
    source_stock ||--o{ stock : "id_source_stock"
    utilisateur ||--o{ commande : "id_utilisateur"
    commande ||--|{ ligne_commande : "id_commande"
    livre ||--o{ ligne_commande : "id_livre"
    commande ||--o{ paiement : "id_commande"
    utilisateur ||--o{ scan_isbn : "id_utilisateur"
    livre ||--o{ scan_isbn : "id_livre"
    ligne_commande ||--o{ stock_mouvement : "id_ligne_commande"
    stock ||--o{ stock_mouvement : "id_stock"

    etat_usure {
        bigint id_etat_usure PK
        string libelle
    }
    source_stock {
        bigint id_source_stock PK
        string libelle
        string type_source
    }
    livre {
        bigint id_livre PK
        bigint id_etat_usure FK
        string sku
        string titre
        decimal prix_chf
        bool actif
        string isbn
        string auteur
        string editeur
        date date_publication
        string langue
    }
    stock {
        bigint id_stock PK
        bigint id_livre FK
        bigint id_source_stock FK
        int quantite_disponible
        int quantite_reservee
    }
    utilisateur {
        bigint id_utilisateur PK
        string email
        string mot_de_passe_hash
        string google_id
        string role
    }
    commande {
        bigint id_commande PK
        bigint id_utilisateur FK
        string numero_commande
        decimal montant_total_chf
        string shipping_method
        decimal frais_port_chf
        datetime cart_expires_at
        string statut
    }
    ligne_commande {
        bigint id_ligne_commande PK
        bigint id_commande FK
        bigint id_livre FK
        int quantite
        decimal prix_unitaire_chf
    }
    paiement {
        bigint id_paiement PK
        bigint id_commande FK
        string reference_externe
        decimal montant_chf
        string statut
    }
    scan_isbn {
        bigint id_scan_isbn PK
        bigint id_utilisateur FK
        bigint id_livre FK
        string isbn_lu
        bool valide
    }
    stock_mouvement {
        bigint id_mouvement PK
        bigint id_ligne_commande FK
        bigint id_stock FK
        int quantite
        datetime date_mouvement
    }
